[package]
name = "rammux"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Razz4780/rammux"
authors = ["Michał Smolarek <msmolarekg@gmail.com>"]
description = "Asynchronous stream multiplexer"
publish = true
keywords = ["multiplexer", "network", "protocol"]
categories = ["network-programming"]
rust-version = "1.93.1"

[dependencies]
bitflags = "2"
bytes = "1"
futures = "0.3"
rand = "0.10"
slab = "0.4"
static_assertions = "1"
thiserror = "2"
tokio = { version = "1", features = ["net", "sync", "time"] }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
rstest = "0.26"
tokio = { version = "1", features = ["full", "test-util"] }
